...
          'HRW-Textscanner',
          style: TextStyle(color: Colors.black),
        ),
      ),
      body: _imageFile == null ? Container(color: Colors.white, child: Center(child: Text('No image selected.'))) : _buildContainerAfterImageScanned(),
      floatingActionButton: FloatingActionButton(
        key: ValueKey('ScannerButton'),
        backgroundColor: Colors.lightBlueAccent,
        onPressed: () {
          Navigator.push(
            context,
            MaterialPageRoute(
                builder: (context) => MediaGrid(
...
